--- a/Aplicacion/Vista/componentes/manual.phtml
+++ b/Aplicacion/Vista/componentes/manual.phtml
@@ -1,22 +1,30 @@
 <?php 
-	/*echo $pagina;*/
-	$servicio = $servicio.'.net';
+	$product = $object_product['ObjectProduct']['Product'];
+	$file_type = $object_product['ObjectProduct']['FileType'];
+	$array_version = $object_product['ObjectProduct']['ObjectVersion'];
+
+	$estado = 0;
+	foreach ($array_version as $key => $value) {
+		if (count($value['File']) > 0) {
+			$estado = 1;
+		}
+	}
 ?>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<blockquote>
-				<p>Manuales</p>
-				<div class="subtitle"><?php echo $servicio; ?></div>
+				<p class="title"><?php echo $file_type->file_description; ?></p>
+				<div class="subtitle"><?php echo $product->product_name; ?></div>
 			</blockquote>
 		</div>
 	</div>
-
 	<div class="clearfix"></div>
-
 	<div class="row">
 		<div class="col-md-12 col-sm-12 col-xs-12">
-		
+			<?php 
+			if ($estado) {
+			?>
 			<!-- Inicio - Table Collapse 1 -->
 			<div class="x_panel">
 				<div class="x_title">
@@ -27,12 +35,21 @@
 					</ul>
 					<div class="clearfix"></div>
 				</div>
-
+				<?php				
+				foreach ($array_version as $key_v => $value_v) {
+					$version = $value_v['Version'];
+					$file = $value_v['File'];
+					
+					if (isset($version)) {
+						if (count($file) > 0) {
+				?>
 				<div class="x_content">
+					<h2>Versión <?php echo $version->version_description; ?><small>&nbsp;</small></h2>
 					<div class="row">
-
+						<?php
+						foreach ($file as $key_f => $value_f) {
+						?>
 						<!-- Inicio - Grilla - Lista -->
-
 						<div class="col-md-55">
 							<div class="thumbnail">
 								<div class="image view view-list">
@@ -40,185 +57,39 @@
 								</div>
 								<div class="caption">
 									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
+										<p><strong><?php echo utf8_encode($value_f->file_name); ?></strong></p>
+										<p>Publicado el <?php echo $value_f->publication_date; ?> <br class="br-list"> <?php echo $value_f->file_size; ?></p>
 									</div>
 									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
+										<p><a href="<?php echo $value_f->file_url; ?>" download="<?php echo utf8_encode($value_f->file_name); ?>" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
 									<div class="clearfix"></div>								
 								</div>
 							</div>
 						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-55 col-md-55-list">
-							<div class="thumbnail">
-								<div class="image view view-list">
-									<img class="img-manual" src="./Static/images/pdf-icon.png" alt="image" />
-								</div>
-								<div class="caption">
-									<div class="caption-left">
-										<p><strong>Como inicializar información con <?php echo $servicio; ?></strong></p>
-										<p>Publicado el 02/02/2017 <br class="br-list"> 5MB</p>
-									</div>
-									<div class="caption-right">
-										<p><a href="http://www.uv.es/vguillem/Laleydelamor.pdf" download="Manual2017" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</div>
-						</div>
-						<!-- Fin - Grilla - Lista -->
-					
+						<!-- Fin - Grilla - Lista -->						
+						<?php
+						}
+						?>					
 					</div>
 				</div>
+				<?php
+						}
+					}
+				}
+				?>
 			</div>
-		</div>	
+			<?php
+			} else {
+			?>
+			<div class="x_panel">
+				No hay manuales...
+			</div>
+			<?php
+			}
+			?>
+		</div>
+		<div class="clearfix"></div>
 	</div>
 	<div class="clearfix"></div>
-
 </div>
