--- a/Aplicacion/Vista/componentes/video.phtml
+++ b/Aplicacion/Vista/componentes/video.phtml
@@ -1,22 +1,30 @@
 <?php 
-	/*echo $pagina;*/
-	$servicio = $servicio.'.net';
+	$product = $object_product['ObjectProduct']['Product'];
+	$file_type = $object_product['ObjectProduct']['FileType'];
+	$array_version = $object_product['ObjectProduct']['ObjectVersion'];
+
+	$estado = 0;
+	foreach ($array_version as $key => $value) {
+		if (count($value['File']) > 0) {
+			$estado = 1;
+		}
+	}
 ?>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<blockquote>
-				<p>Videos</p>
-				<div class="subtitle"><?php echo $servicio; ?></div>
+				<p class="title"><?php echo $file_type->file_description; ?></p>
+				<div class="subtitle"><?php echo $product->product_name; ?></div>
 			</blockquote>
 		</div>
 	</div>
-
 	<div class="clearfix"></div>
-
 	<div class="row">
 		<div class="col-md-12 col-sm-12 col-xs-12">
-		
+			<?php 
+			if ($estado) {
+			?>
 			<!-- Inicio - Table Collapse 1 -->
 			<div class="x_panel">
 				<div class="x_title">
@@ -29,167 +37,67 @@
 					</ul>
 					<div class="clearfix"></div>
 				</div>
-
-				<div class="x_content">
-					<div class="row">
-
-						<!-- Inicio - Grilla -->
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Instalación del sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-	                                		<!--<a href="#"><i class="fa fa-link"></i></a>
-	                                		<a href="#"><i class="fa fa-pencil"></i></a>
-	                                		<a href="#"><i class="fa fa-times"></i></a>-->
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Instalación del sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Instalación del sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Instalación del sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                            		<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1Twt0oMiX_Y?ecver=1" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<div class="col-md-55 col-md-55-video">
-                        	<div class="thumbnail">
-                    			<div class="caption caption-video">
-									<p><strong>Beneficios de instalar nuestro sistema RMS.NET</strong></p>
-									<p>Subido el viernes 10, 2017</p>
-								</div>
-                          		<div class="image view view-first">
-                          			<iframe class="iframe-video" width="100%" height="100%" src="https://www.youtube.com/embed/1tJeo6Rla8E" frameborder="0" allowfullscreen></iframe>
-                            		<div class="mask no-caption">
-	                              		<div class="tools tools-bottom">
-	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
-                              			</div>
-                            		</div>
-                          		</div>
-                        	</div>
-                      	</div>
-
-						<!-- Fin - Grilla -->
-
-						<!-- Inicio - Modal video -->
-						<div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">						  	
-						  	<div class="modal-dialog" role="document">
-						  		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						  		<iframe id="modal-iframe" width="100%" height="350px" src="" frameborder="0" allowfullscreen></iframe>						  		
-						  	</div>
-						</div>
-						<!-- Fin - Modal video -->
+				<?php				
+				foreach ($array_version as $key_v => $value_v) {
+					$version = $value_v['Version'];
+					$file = $value_v['File'];
 					
+					if (isset($version)) {
+						if (count($file) > 0) {
+				?>
+				<div class="x_content">
+					<h2>Versión <?php echo $version->version_description; ?><small>&nbsp;</small></h2>
+					<div class="row">
+						<?php
+						foreach ($file as $key_f => $value_f) {
+						?>
+						<!-- Inicio - Grilla -->
+						<div class="col-md-55 col-md-55-video">
+                        	<div class="thumbnail">
+                    			<div class="caption caption-video">
+									<p><strong><?php echo utf8_encode($value_f->file_name); ?></strong></p>
+									<p>Subido el <?php echo $value_f->publication_date; ?></p>
+								</div>
+                          		<div class="image view view-first">
+                            		<iframe class="iframe-video" width="100%" height="100%" src="<?php echo $value_f->file_url; ?>" frameborder="0" allowfullscreen></iframe>
+                            		<div class="mask no-caption">
+	                              		<div class="tools tools-bottom">
+	                              			<a href="javascript:void(0);" class="view-video"><i class="glyphicon glyphicon-eye-open"></i></a>
+                              			</div>
+                            		</div>
+                          		</div>
+                        	</div>
+                      	</div>
+						<!-- Fin - Grilla -->
+						<?php
+						}
+						?>					
 					</div>
 				</div>
+				<?php
+						}
+					}
+				}			
+				?>
+				<!-- Inicio - Modal video -->
+				<div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">						  	
+				  	<div class="modal-dialog" role="document">
+				  		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				  		<iframe id="modal-iframe" width="100%" height="350px" src="" frameborder="0" allowfullscreen></iframe>						  		
+				  	</div>
+				</div>
+				<!-- Fin - Modal video -->
 			</div>
+			<?php
+			} else {
+			?>
+			<div class="x_panel">
+				No hay videos...
+			</div>
+			<?php
+			}
+			?>
 		</div>	
 	</div>
 	<div class="clearfix"></div>
-
 </div>
