--- a/Aplicacion/Vista/contenedor.phtml
+++ b/Aplicacion/Vista/contenedor.phtml
@@ -38,7 +38,7 @@
                 <h3>Servicios</h3>
                 <ul class="nav side-menu">
                   <li class="active">
-                    <a><i class="fa fa-home"></i> RMS.NET <span class="fa fa-chevron-down"></span></a>
+                    <a><i class="fa fa-desktop"></i> RMS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display: block;">
                       <li><a href="javascript:void(0)" class="net-servicio" page="actualizacion" ser="rms">Actualizaciones</a></li>
                       <li><a href="javascript:void(0)" class="net-servicio" page="correccion" ser="rms">Correcciones</a></li>
@@ -46,7 +46,7 @@
                       <li><a href="javascript:void(0)" class="net-servicio" page="video" ser="rms">Videos</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-edit"></i> POS.NET <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-fax"></i> POS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="javascript:void(0)" class="net-servicio" page="actualizacion" ser="pos">Actualizaciones</a></li>
                       <li><a href="javascript:void(0)" class="net-servicio" page="correccion" ser="pos">Correcciones</a></li>
@@ -54,7 +54,7 @@
                       <li><a href="javascript:void(0)" class="net-servicio" page="video" ser="pos">Videos</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-desktop"></i> WMS.NET <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-laptop"></i> WMS.NET <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="javascript:void(0)" class="net-servicio" page="actualizacion" ser="wms">Actualizaciones</a></li>
                       <li><a href="javascript:void(0)" class="net-servicio" page="correccion" ser="wms">Correcciones</a></li>
@@ -62,7 +62,7 @@
                       <li><a href="javascript:void(0)" class="net-servicio" page="video" ser="wms">Videos</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-bug"></i> POLLING <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-edit"></i> POLLING <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="javascript:void(0)" class="net-servicio" page="actualizacion" ser="polling">Actualizaciones</a></li>
                       <li><a href="javascript:void(0)" class="net-servicio" page="correccion" ser="polling">Correcciones</a></li>
@@ -72,29 +72,30 @@
                   </li>
                 </ul>
               </div>
-
-              <div class="menu_section">
-                <h3>Otros</h3>
-                <ul class="nav side-menu">
-                  <li><a><i class="fa fa-bug"></i> Redes Sociales <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="javascript:void(0)" class="redes-sociales">Facebook</a></li>
-                      <li><a href="javascript:void(0)" class="redes-sociales">Twitter</a></li>
-                      <li><a href="javascript:void(0)" class="redes-sociales">Instagram</a></li>
-                      <li><a href="javascript:void(0)" class="redes-sociales">Youtube</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
               
               <?php if ($_SESSION['User']['Type'] == 1) { ?>
               <div class="menu_section">
                 <h3>Admin</h3>
                 <ul class="nav side-menu">
-                  <li><a><i class="fa fa-bug"></i> Gestión Usuarios <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-users"></i> Gestión Usuarios <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="javascript:void(0)" class="gestion-admin">Nuevo Usuario</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Tipo Usuario</a></li>
                       <li><a href="javascript:void(0)" class="gestion-admin">Lista Usuarios</a></li>
+                    </ul>
+                  </li>
+                  <li><a><i class="fa fa-tags"></i> Gestión Productos <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="javascript:void(0)" class="gestion-admin">Registrar Producto</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Registrar Versión</a></li>
+                    </ul>
+                  </li>
+                  <li><a><i class="fa fa-file-text-o"></i> Gestión Contenidos <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="javascript:void(0)" class="gestion-admin">Registrar Actualización</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Registrar Corrección</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Registrar Manuales</a></li>
+                      <li><a href="javascript:void(0)" class="gestion-admin">Registrar Videos</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -106,17 +107,17 @@
 
             <!-- /menu footer buttons -->
             <div class="sidebar-footer hidden-small">
-              <a data-toggle="tooltip" data-placement="top" title="Settings">
-                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+              <a data-toggle="tooltip" data-placement="top" title="Facebook">
+                <span class="fa fa-facebook-square" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+              <a data-toggle="tooltip" data-placement="top" title="Twitter">
+                <span class="fa fa-twitter-square" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Lock">
-                <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+              <a data-toggle="tooltip" data-placement="top" title="Linkedin">
+                <span class="fa fa-linkedin-square" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="./login/cerrarSession/">
-                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+              <a data-toggle="tooltip" data-placement="top" title="Youtube">
+                <span class="fa fa-youtube" aria-hidden="true"></span>
               </a>
             </div>
             <!-- /menu footer buttons -->
