--- a/Static/css/retailcs.css
+++ b/Static/css/retailcs.css
@@ -22,6 +22,10 @@ blockquote {
     border-left: 5px solid #eee;
 }
 
+blockquote .title {
+    text-transform: capitalize;
+}
+
 blockquote .subtitle {
     display: block;
     font-size: 70%;
@@ -110,3 +114,5 @@ body .container .x_panel .x_content .modal-dialog .close:hover {
     color: #fff !important;
     opacity: 0.7 !important;
 }
+
+
