--- a/Aplicacion/Vista/componentes/manual.phtml
+++ b/Aplicacion/Vista/componentes/manual.phtml
@@ -10,6 +10,7 @@
 		}
 	}
 ?>
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
@@ -22,9 +23,11 @@
 	<div class="clearfix"></div>
 	<div class="row">
 		<div class="col-md-12 col-sm-12 col-xs-12">
+
 			<?php 
 			if ($estado) {
 			?>
+
 			<!-- Inicio - Table Collapse 1 -->
 			<div class="x_panel">
 				<div class="x_title">
@@ -35,6 +38,7 @@
 					</ul>
 					<div class="clearfix"></div>
 				</div>
+
 				<?php				
 				foreach ($array_version as $key_v => $value_v) {
 					$version = $value_v['Version'];
@@ -43,12 +47,15 @@
 					if (isset($version)) {
 						if (count($file) > 0) {
 				?>
+
 				<div class="x_content">
 					<h2>Versión <?php echo $version->version_description; ?><small>&nbsp;</small></h2>
 					<div class="row">
+
 						<?php
 						foreach ($file as $key_f => $value_f) {
 						?>
+
 						<!-- Inicio - Grilla - Lista -->
 						<div class="col-md-55">
 							<div class="thumbnail">
@@ -58,36 +65,44 @@
 								<div class="caption">
 									<div class="caption-left">
 										<p><strong><?php echo utf8_encode($value_f->file_name); ?></strong></p>
-										<p>Publicado el <?php echo $value_f->publication_date; ?> <br class="br-list"> <?php echo $value_f->file_size; ?></p>
+										<p>Publicado el <?php echo formatDate($value_f->publication_date); ?> <br class="br-list"> <?php if($value_f->file_size!=''){ echo $value_f->file_size; } ?></p>
 									</div>
 									<div class="caption-right">
 										<p><a href="<?php echo $value_f->file_url; ?>" download="<?php echo utf8_encode($value_f->file_name); ?>" type="button" class="btn btn-primary"><i class="fa fa-download"></i> Descargar</a></p>	
 									</div>
-									<div class="clearfix"></div>								
+									<div class="clearfix"></div>
 								</div>
 							</div>
 						</div>
-						<!-- Fin - Grilla - Lista -->						
+						<!-- Fin - Grilla - Lista -->
+
 						<?php
 						}
-						?>					
+						?>
+
 					</div>
 				</div>
+
 				<?php
 						}
 					}
 				}
 				?>
+
 			</div>
+
 			<?php
 			} else {
 			?>
+
 			<div class="x_panel">
 				No hay manuales...
 			</div>
+
 			<?php
 			}
 			?>
+			
 		</div>
 		<div class="clearfix"></div>
 	</div>
